# api/routes/order.js
@@ -1,7 +1,7 @@
 const express = require('express');
 const router = express.Router();
 const orderController = require('../controllers/orderController');
-const auth = require('../middlewares/auth');
+const auth = require('../middleware/auth');
 
 router.post('/', auth, orderController.placeOrder);
 router.get('/', auth, orderController.getUserOrders);
